--- a/spring.homework/src/main/resources/jdbc.properties
+++ b/spring.homework/src/main/resources/jdbc.properties
@@ -1,4 +1,5 @@
 jdbc.driverClassName=org.apache.derby.jdbc.EmbeddedDriver
-jdbc.url=jdbc:derby:d://temp;create=true
+#jdbc.url=jdbc:derby:d://temp1;create=true
+jdbc.url=jdbc:derby:memory:myInMemDB;create=true
 jdbc.username=aa
 jdbc.password=bb
